--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -10,6 +10,7 @@
   color: black;
   text-align: center;
   padding-top: 50px; /* 上部に余白を追加 */
+  padding-bottom: 50px;
 }
 
 @media (max-width: 768px) {
