--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -73,38 +73,38 @@ p:first-of-type {
 }
 
 p:nth-of-type(2) {
-  text-align: left; /* 左寄せ */
+  text-align: center;
   width: 100%; /* コンテナ幅いっぱいに広げる */
   max-width: 800px; /* 調整しやすいように最大幅を設定（任意） */
-  margin: 0 auto 10px 0; /* 左側に寄せるために `auto` を使わない */
+  margin: 0 auto 10px auto;
 }
 
 p:nth-of-type(3) {
-  text-align: left; /* 左寄せ */
+  text-align: center;
   width: 100%; /* コンテナ幅いっぱいに広げる */
   max-width: 800px; /* 調整しやすいように最大幅を設定（任意） */
-  margin: 0 auto 10px 0; /* 左側に寄せるために `auto` を使わない */
+  margin: 0 auto 10px auto;
 }
 
 p:nth-of-type(4) {
-  text-align: left; /* 左寄せ */
+  text-align: center;
   width: 100%; /* コンテナ幅いっぱいに広げる */
   max-width: 800px; /* 調整しやすいように最大幅を設定（任意） */
-  margin: 0 auto 10px 0; /* 左側に寄せるために `auto` を使わない */
+  margin: 0 auto 10px auto;
 }
 
 p:nth-of-type(5) {
-  text-align: left; /* 左寄せ */
+  text-align: center;
   width: 100%; /* コンテナ幅いっぱいに広げる */
   max-width: 800px; /* 調整しやすいように最大幅を設定（任意） */
-  margin: 0 auto 10px 0; /* 左側に寄せるために `auto` を使わない */
+  margin: 0 auto 10px auto;
 }
 
 p:nth-of-type(6) {
-  text-align: center; /* 中央寄せ */
+  text-align: left;
   width: 100%; /* コンテナ幅いっぱい */
   max-width: 800px; /* 最大幅を設定 */
-  margin: 0 auto 10px auto; /* 自動で中央寄せ */
+  margin: 0 auto 10px 0;
 }
 
 p:nth-of-type(7) {
@@ -112,4 +112,11 @@ p:nth-of-type(7) {
   width: 100%; /* コンテナ幅いっぱい */
   max-width: 800px; /* 最大幅を設定 */
   margin: 0 auto 10px auto; /* 自動で中央寄せ */
+}
+
+p:nth-of-type(8) {
+  text-align: left;
+  width: 100%; /* コンテナ幅いっぱい */
+  max-width: 800px; /* 最大幅を設定 */
+  margin: 0 auto 10px 0;
 }
